@@ -36,6 +36,7 @@ using System.Text;
 using System.Collections.Generic;
 using DiscImageChef.Console;
 using DiscImageChef.Filters;
+using DiscImageChef.Core;
 
 namespace DiscImageChef.Commands
 {
