@@ -54,7 +54,6 @@
     <Compile Include="Commands\PrintHex.cs" />
     <Compile Include="Commands\Decode.cs" />
     <Compile Include="Commands\Entropy.cs" />
-    <Compile Include="DetectImageFormat.cs" />
     <Compile Include="Commands\DeviceInfo.cs" />
     <Compile Include="Commands\MediaInfo.cs" />
     <Compile Include="Commands\Benchmark.cs">
